--- a/renovate.json
+++ b/renovate.json
@@ -5,11 +5,29 @@
   "extends": [
     "config:base"
   ],
+  "timezone": "Asia/Tokyo",
+  "schedule": [
+    "every weekend"
+  ],
   "semanticCommits": true,
   "lockFileMaintenance": {
     "enabled": true
   },
   "vulnerabilityAlerts": {
     "enabled": true
-  }
+  },
+  "labels": [
+    "renovate"
+  ],
+  "patch": {
+    "automerge": true
+  },
+  "packageRules": [
+    {
+      "depTypeList": [
+        "devDependencies"
+      ],
+      "automerge": true
+    }
+  ]
 }
