--- a/.github/workflows/validate-config.yml
+++ b/.github/workflows/validate-config.yml
@@ -1,29 +1,30 @@
+---
 name: Validate renovate config
-
 on:
   push:
     branches: [master]
+    paths-ignore:
+      - '**.md'
   pull_request:
-
+    paths-ignore:
+      - '**.md'
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     env:
       CI: true
-
     strategy:
       matrix:
         node-version: [12.x]
-
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - uses: actions/cache@v2
+    - name: Cache (npm)
+      uses: actions/cache@v2
       with:
         path: ~/.npm
         key: ${{ runner.os }}-node
