--- a/.github/workflows/validate-config.yml
+++ b/.github/workflows/validate-config.yml
@@ -15,12 +15,12 @@ jobs:
       CI: true
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [16]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache (npm)
