--- a/.github/workflows/validate-config.yml
+++ b/.github/workflows/validate-config.yml
@@ -27,11 +27,7 @@ jobs:
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Cache (npm)
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node
+          cache: npm
       - name: Validate renovate config
         run: |
           for file in *.json
